# gil

boost/gil/: algorithm.hpp  color_convert.hpp  image.hpp  locator.hpp  utilities.hpp
boost/gil/extension/io2/: backend_reader.hpp  backend_writer.hpp  dynamic_image.hpp  extern_lib_guard.hpp  format_tags.hpp  formatted_image.hpp  gp_image.hpp  gp_private_base.hpp  gp_private_io.hpp  gp_private_istreams.hpp  gp_private_png_io.ipp  libjpeg_image.hpp  libjpeg_private_base.hpp  libpng_image.hpp  libtiff_image.hpp  libtiff_private_base.hpp  libtiff_reader.hpp  libtiff_writer.hpp  png_io.hpp  png_io_libpng.ipp  png_io_private.hpp  reader.hpp  wic_image.hpp  wic_reader.hpp  wic_writer.hpp  writer.hpp
boost/gil/extension/io2/backends/detail/: backend.hpp  extern_lib_guard.hpp  reader.hpp  reader_for.hpp  writer.hpp  writer_for.hpp
boost/gil/extension/io2/backends/gp/: backend.hpp  reader.hpp  writer.hpp
boost/gil/extension/io2/backends/libjpeg/: backend.hpp  reader.hpp  writer.hpp
boost/gil/extension/io2/backends/libpng/: backend.hpp  reader.hpp  writer.hpp
boost/gil/extension/io2/backends/libtiff/: backend.hpp  reader.hpp  writer.hpp
boost/gil/extension/io2/backends/wic/: backend.hpp  extern_lib_guard.hpp  reader.hpp  writer.hpp
boost/gil/extension/io2/detail/: extern_lib.hpp  gp_extern_lib_guard.hpp  io_error.hpp  libx_shared.hpp  memory_mapping.cpp  memory_mapping.hpp  shared.hpp  wic_extern_lib_guard.hpp  windows_shared.hpp  windows_shared_istreams.hpp
boost/gil/extension/io2/devices/: c_file.hpp  c_file_descriptor.hpp  c_file_name.hpp  device.hpp
libs/gil/doc/io2/: readme.txt
libs/gil/io2/doc/: Doxyfile
libs/gil/io2/test/: CMakeLists.txt  build_options.cmake  test.cpp
libs/gil/io2/test/images/jpg/: online_sources.txt
libs/gil/io2/test/images/png/: in_mem.hpp  mpng.cpp  mpng.hpp  online_sources.txt
libs/gil/io2/test/images/tiff/: online_sources.txt
